<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>loomtest</groupId>
    <artifactId>game-of-life</artifactId>
    <packaging>jar</packaging>
    <name>Game of Life Demo</name>
    <version>1.0.0-SNAPSHOT</version>
    <properties>
        <kotlin.version>1.7.10</kotlin.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-stdlib</artifactId>
            <version>${kotlin.version}</version>
        </dependency>

        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-stdlib-jdk8</artifactId>
            <version>${kotlin.version}</version>
        </dependency>

        <dependency>
            <groupId>org.jetbrains.kotlinx</groupId>
            <artifactId>kotlinx-coroutines-core</artifactId>
            <version>1.6.4</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-maven-plugin</artifactId>
                <version>${kotlin.version}</version>
                <executions>
                    <execution>
                        <id>compile</id>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <configuration>
                            <sourceDirs>
                                <sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
                                <sourceDir>${project.basedir}/src/main/java</sourceDir>
                            </sourceDirs>
                        </configuration>
                    </execution>
                    <execution>
                        <id>test-compile</id>
                        <goals> <goal>test-compile</goal> </goals>
                        <configuration>
                            <sourceDirs>
                                <sourceDir>${project.basedir}/src/test/kotlin</sourceDir>
                                <sourceDir>${project.basedir}/src/test/java</sourceDir>
                            </sourceDirs>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>19</source>
                    <target>19</target>
                    <compilerArgument>--enable-preview</compilerArgument>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>native</id>
            <build>
                <plugins>
                <plugin>
                    <groupId>org.graalvm.buildtools</groupId>
                    <artifactId>native-maven-plugin</artifactId>
                    <version>0.9.13</version>
                    <extensions>true</extensions>
                    <executions>
                    <execution>
                        <id>build-native</id>
                        <goals>
                        <goal>build</goal>
                        </goals>
                        <phase>package</phase>
                    </execution>
                    </executions>
                    <configuration>
                        <mainClass>gameoflife.Main</mainClass>
                        <buildArgs>
                            <arg>--enable-preview</arg>
                            <arg>--install-exit-handlers</arg>
                            <arg>-H:ReflectionConfigurationFiles=${project.basedir}/reflection.json</arg>
                            <!-- <arg>\-\gc=G1</arg> -->
                            <!-- <arg>\-\-pgo-instrument</arg> -->
                            <!-- <arg>\-\-pgo=${project.basedir}/default.iprof</arg> -->
                        </buildArgs>
                    </configuration>
                </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
